# privatemail

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  release.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  codacy-analysis.yml  deploy.yml  release.yml  rust.yml  scorecards.yml  security.yml  terraform.yml  tfsec-analysis.yml
src/: config.rs  lib.rs  main.rs
src/lib/: config.rs
terraform/: main.tf  output.tf  variables.tf
tests/: integration_test.rs
tests/payload/: testEvent.json  test_event.json
