cargo-features = ["strip"]

[package]
name        = "privatemail"
description = "Service to forward custom emails to personal email server"
version     = "0.2.0"
authors     = ["Nyah Check <hello@nyah.dev>"]
license     = "MIT"
homepage    = "https://github.com/ch3ck"
repository  = "https://github.com/ch3ck/privatemail"
readme      = "README.md"
categories  = ["email", "web-programming", "config", "development-tools"]
keywords    = ["lambda", "aws", "email", "security", "rust"]
edition     = "2018"
documentation = "https://docs.rs/privatemail"


[lib]
name = "config"
path = "src/config.rs"

[profile.release]
overflow-checks = true
panic 			= "abort"
strip           = "debuginfo"

[dependencies]
charset = "0.1.3"
lambda_runtime = "0.5.0"
mailparse = "0.13.7"
rusoto_core = "0.47.0"
rusoto_ses = "0.47.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }


[[bin]]
name = "bootstrap"
path = "src/main.rs"
